gitops/infrastructure/controllers/hubble-ui/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: hubble-ui
spec:
  parentRefs:
    - name: taskflow-gateway
      namespace: taskflow
      sectionName: https
  hostnames:
    - "hubble.jokelab.dev"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: hubble-ui-oauth2-proxy
          port: 4180
